tests/ui/const-generics/mgca/type_const-on-generic-expr.stderr
error: generic parameters may not be used in const operations
  --> $DIR/type_const-on-generic-expr.rs:5:53
   |
LL | const FREE1<T>: usize = const { std::mem::size_of::<T>() };
   |                                                     ^

error: generic parameters may not be used in const operations
  --> $DIR/type_const-on-generic-expr.rs:9:46
   |
LL | const FREE2<const I: usize>: usize = const { I + 1 };
   |                                              ^

error: generic parameters may not be used in const operations
  --> $DIR/type_const-on-generic-expr.rs:25:54
   |
LL |     const N1<T>: usize = const { std::mem::size_of::<T>() };
   |                                                      ^

error: generic parameters may not be used in const operations
  --> $DIR/type_const-on-generic-expr.rs:28:47
   |
LL |     const N2<const I: usize>: usize = const { I + 1 };
   |                                               ^

error: generic parameters may not be used in const operations
  --> $DIR/type_const-on-generic-expr.rs:31:35
   |
LL |     const N3: usize = const { 2 & X };
   |                                   ^

error: generic parameters may not be used in const operations
  --> $DIR/type_const-on-generic-expr.rs:5:53
   |
LL | const FREE1<T>: usize = const { std::mem::size_of::<T>() };
   |                                                     ^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 6 previous errors

